# browser-webapi

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  openapi.yml  postman_collection.json
.codex/skills/rebuild-restart/: SKILL.md
.docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
.github/instructions/: functional_style.instructions.md
.github/workflows/: ci.yml  docker-publish.yml
.serena/: project.yml
.serena/memories/: user_preference_full_chains.md
src/: lib.rs  main.rs  models.rs  routes.rs
src/browser/: api.rs  domain.rs  dto.rs  handlers.rs  mod.rs  models.rs  page.rs  tests.rs
src/browser/element/: api.rs  dto.rs
src/browser/page/: api.rs  handlers.rs  mod.rs  models.rs
src/browser/tab/: api.rs  dto.rs
src/config/: mod.rs
src/handlers/: auth_handlers.rs  browser_handlers.rs  browser_handlers_tests.rs  mod.rs
src/handlers/browser/page/: mod.rs
src/models/: mod.rs
src/models/browser/: mod.rs
src/models/browser/page/: mod.rs
src/routes/: mod.rs
src/routes/browser/: mod.rs  page.rs
src/routes/browser/page/: mod.rs
src/utils/: mod.rs
src/web_api/: mod.rs  response.rs  routes.rs  server.rs
