[package]
name = "browser_api"
version = "0.1.0"
edition = "2024"
authors = ["Andrei Pestunov masterlifting@gmail.com>"]
description = "A web API for browser automation using headless Chrome"
repository = "https://github.com/yourusername/browser-automation-webapi"
readme = "README.md"
keywords = ["browser", "automation", "web", "api", "headless"]
license = "MIT"

[dependencies]
dotenv = "^0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-actix-web = "0.7.18"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
headless_chrome = "1.0.9"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
url = "2.5.0"
regex = "1.9.1"
lazy_static = "1.4.0"

[dev-dependencies]
mockito = "1.2.0"
rstest = "0.25.0"
reqwest = { version = "0.12.19", features = ["json"] }

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
debug = 1
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
