[package]
name = "browser-webapi"
version = "1.0.1"
edition = "2024"
authors = ["Andrei Pestunov <masterlifting@gmail.com>"]
description = "A web API for browser automation using headless Chrome"
repository = "https://github.com/masterlifting/browser-webapi"
readme = "README.md"
keywords = ["browser", "automation", "web", "api", "headless"]
license = "MIT"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.11"
actix-cors = "0.7"
headless_chrome = "1.0.18"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"

# Development profile - fast compilation
[profile.dev]
opt-level = 0
debug = 1
overflow-checks = true
incremental = true
split-debuginfo = "unpacked" # Faster linking on supported platforms

# Release profile - maximum optimization
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 3

# Test profile
[profile.test]
opt-level = 1
debug = 1

# Specific optimizations for heavy dependencies
[profile.dev.package.headless_chrome]
opt-level = 3

[profile.dev.package.actix-web]
opt-level = 3

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.regex]
opt-level = 3
